# Student_management

./: .gitignore  README.md  main.py  pyproject.toml
backend/: db_sql.py  students_enrolled.db  students_utility.py
guis/: mainwindowGUI.py
